<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DabbawalaApplication</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login">Login</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="new_password">Password</string>
    <string name="re_enter_password">Repeat password</string>
    <string name="address">"Address : "</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip_code">Zip Code</string>
    <string name="email_id">Email Id</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="enter_email_id">Enter Email ID</string>
    <string name="send_reset_password_instructions">Send Reset Password Instructions</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_username">Enter Username</string>
    <string name="sign_out">Sign Out</string>
    <string name="view_profile">View Profile</string>

</resources>
