<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" 
    style="@style/activity_background">
    
    <Button 
        android:id="@+id/btn_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:padding="8dp"
        android:text="@string/sign_up"/>
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:layout_above="@+id/layout_login"
        android:text="@string/login"
        style="@style/text_heading"/>    
        
    <LinearLayout
        android:id="@+id/layout_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        >
        
        <EditText 
            android:id="@+id/edit_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:padding="8dp"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:background="@drawable/textbox_drawable"
            android:textSize="22sp"
            android:hint="@string/user_name"
            />
        
        <EditText 
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:padding="8dp"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            android:background="@drawable/textbox_drawable"
            android:textSize="22sp"
            android:hint="@string/password"
            />
        
        <Button 
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_gravity="center"
            android:padding="8dp"
            android:text="@string/login"
            />
        
        <Button 
            android:id="@+id/btn_forgot_pswd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_gravity="center"
            android:padding="8dp"
            android:text="@string/forgot_password"
            />
        
    </LinearLayout>

   

</RelativeLayout>
